--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
-#spring.mongodb.embedded.version=5.0.6
-spring.data.mongodb.uri=mongodb+srv://chun:YenPsFQUr8SWVJ0G@cluster0.urdcj.mongodb.net/?retryWrites=true&w=majority
-spring.data.mongodb.database=fease
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.datasource.url=jdbc:tc:mysql:8:///test
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
+spring.jpa.generate-ddl=false
