need to config the two datasource manually

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
-spring.datasource.url=jdbc:tc:mysql:8:///test
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8InnoDBDialect
+#spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+#spring.datasource.url=jdbc:tc:mysql:8:///?TC_INITSCRIPT=init.sql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.generate-ddl=false
