--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ out/*
 # Created by https://www.toptal.com/developers/gitignore/api/maven,intellij,macos,windows
 # Edit at https://www.toptal.com/developers/gitignore?templates=maven,intellij,macos,windows
 
-neo4jdb/
+fease_graph/
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
