--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 spring.profiles.active=neo4j
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+
+spring.datasource.url=jdbc:h2:mem:fease;DB_CLOSE_DELAY=-1
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
+
+spring.h2.console.enabled=true
