--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,14 @@
             <artifactId>neo4j</artifactId>
             <version>${org.neo4j.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.neo4j/neo4j-ogm -->
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-ogm</artifactId>
+            <version>4.0.1</version>
+            <type>pom</type>
+        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
